indicator-printers (0.1.6-0ubuntu4) UNRELEASED; urgency=low

  * debian/control:
    - Bump debhelper Build-Depends to (>= 9).
    - Update style to be consistent with other indicators.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Mon, 19 Nov 2012 11:34:17 -0500

indicator-printers (0.1.6-0ubuntu3) quantal; urgency=low

  * Cherry-pick a fix in trunk for FTBFS (cups changed its API):
    - Don't access CUPS' ipp_attribute_t directly. Thanks Larsu

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 07 Sep 2012 17:07:36 +0200

indicator-printers (0.1.6-0ubuntu2) quantal; urgency=low

  * debian/control:
    - Don't recommend Unity; indicators work in GNOME Classic session
      without Unity being installed

 -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 31 Aug 2012 20:04:34 -0400

indicator-printers (0.1.6-0ubuntu1) precise; urgency=low

  * New upstream release.
    * Add test coverage build targets

 -- Ted Gould <ted@ubuntu.com>  Wed, 04 Apr 2012 15:05:58 -0500

indicator-printers (0.1.5-0ubuntu1) precise; urgency=low

  * New upstream release.
    - translate accessible description (LP: #957522)
    - set lease durations on cups subscriptions (LP: #959195)
    - draw number of jobs as lozenge

 -- Lars Uebernickel <lars.uebernickel@ubuntu.com>  Tue, 20 Mar 2012 18:50:39 +0100

indicator-printers (0.1.4-0ubuntu1) precise; urgency=low

  * New upstream release.
    - fix small i18n problems, thanks Gabor!  (LP: #945547)

 -- Lars Uebernickel <lars.uebernickel@ubuntu.com>  Tue, 06 Mar 2012 22:21:12 +0100

indicator-printers (0.1.3-0ubuntu2) precise; urgency=low

  * Add symbolic printer icons by Daniel Planas Armangue (LP: #840151)

 -- Lars Uebernickel <lars.uebernickel@ubuntu.com>  Thu, 23 Feb 2012 15:57:28 +0100

indicator-printers (0.1.3-0ubuntu1) precise; urgency=low

  * New upstream release.
    - generate dbus service file with the correct path
    - use IndicatorServiceManager to manage the lifecycle of the service
