@@ -1,16 +1,19 @@
 #!/usr/bin/make -f
 
-#DEB_BUILDDIR = build
-
-include /usr/share/cdbs/1/rules/autoreconf.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/gnome.mk
-
 DEB_CONFIGURE_EXTRA_FLAGS = --disable-static
 
 CFLAGS += -Wno-error=deprecated-declarations
 LDFLAGS += -Wl,-z,defs -Wl,--as-needed
 
-common-install-arch::
+export DPKG_GENSYMBOLS_CHECK_LEVEL = 4
+
+%:
+	dh $@ --with autoreconf
+
+override_dh_autoreconf:
+	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
+
+override_dh_install:
 	find debian/indicator-printers -name \*.la -delete
 	find debian/indicator-printers -name \*.a -delete
+	dh_install --fail-missing
